2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: format_assocs

	* base.h (format_assocs): New func decl.
	* rcsgen.c (format_assocs): New func.
	(putadmin): Use ‘format_assocs’.
	* rlog.c (main): Likewise.
	* alive.test: Update expected rlog(1) output.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Recognize ‘commitid SYMBOL’ in RCS file delta tree.

	* base.h (struct hshentry): Add member ‘commitid’.
	(tiny_commitid): New var decl, via ‘TINY_DECL’.
	* b-anchor.c (tiny_commitid): New var, via ‘TINYK’.
	* rcssyn.c (getdelta): Recognize ‘commitid’; validate/save its value.
	* rcsgen.c (putdelta): Output ‘commitid’ info, if available.
	* rlog.c (putadelta): Likewise.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move ‘expandline’ scratch to expansion context.

	* b-kwxout.h (struct expctx): Add member ‘lparts’.
	* b-kwxout.c (LPARTS): Delete #define.
	(ENSURE_LPARTS): Delete macro.
	(expandline): Create/use space directly in expansion context.
	* base.h (struct manifestation): Delete member ‘lparts’.

2010-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] For rcsedit.c, use es->foo directly.

	* rcsedit.c (EDIT): Delete macro.
	(insertline): Use ‘es->foo’ instead of ‘EDIT (foo)’.
	(deletelines, snapshotedit_fast, finishedit_fast, swapeditfiles)
	(finishedit_slow, snapshotedit_slow, copylines, copystring)
	(enterstring, editstring): Likewise.

2010-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Tighten ‘finishedit_fast’.

	* rcsedit.c (finisheditline): Take ‘struct expctx *’.
	(finishedit_fast): Create expansion context, pass to ‘finisheditline’.

2010-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct assoc’ with ‘struct wlink’ + ‘struct symdef’.

	Here, "U" means "Update to use ‘struct wlink’ + ‘struct symdef’".
	* base.h (struct assoc): Delete.
	(struct symdef): New.
	(struct repository): Use ‘struct wlink’ for ‘admin.assocs’.
	* rcs.c (doassoc): U.
	* rcsedit.c (addsymbol): U.
	* rcsgen.c (putadmin): U.